--- a/Front End Mentors/product-preview-card-component-main/index.html
+++ b/Front End Mentors/product-preview-card-component-main/index.html
@@ -18,6 +18,7 @@
     <div class="card">
       
       <div class="image"></div>
+      <div class="image-mobile"></div>
 
       <div class="product">
         
