--- a/frontendmentors/nft/index.html
+++ b/frontendmentors/nft/index.html
@@ -49,7 +49,7 @@
   </article>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">mandomguy aka whitespace</a>.
   </div>
 </main>
 
